--- a/src/styles/RecipePreview.module.css
+++ b/src/styles/RecipePreview.module.css
@@ -1,23 +1,35 @@
+:root {
+  --card_width: 330px;
+}
+
 .recipes_container {
+  width: 1200px;
+  margin: auto;
   display: flex;
+  justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
 .recipe_card {
-  margin: 2rem;
-  width: 350px;
-  height: 400px;
+  position: relative;
+  margin: 1rem;
+  width: var(--card_width);
+  height: 350px;
   border: 0.3px solid;
   border-radius: 15px;
   box-shadow: 5px 5px 2px 1px rgba(70, 70, 70, 0.2);
-  overflow: hidden;
   transition: all 0.2s;
 }
 
-.recipe_image {
+.recipe_image,
+.recipe_overlay {
   width: 100%;
-  height: 235px;
+  width: var(--card_width);
+  height: 220px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+  overflow: hidden;
 }
 
 .recipe_card:hover {
@@ -27,9 +39,9 @@
 .recipe_description {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: calc(100% - 235px);
-  padding: 2rem;
+  justify-content: flex-start;
+  height: 130px;
+  padding-left: 1rem;
 }
 
 .recipe_title {
@@ -39,16 +51,81 @@
 }
 
 .recipe_button {
-  width: 90px;
   margin-top: 1rem;
+  width: 110px;
+  height: 30px;
   background-color: transparent;
   box-shadow: none;
   border: 0.3px solid black;
   border-radius: 5px;
   box-shadow: 3px 3px 2px 1px rgba(70, 70, 70, 0.2);
   transition: all 0.2s;
-  }
+}
 
-  .recipe_button:hover {
-    box-shadow: 1px 1px 2px 1px rgba(70, 70, 70, 0.4);
+.recipe_button:hover {
+  box-shadow: 1px 1px 2px 1px rgba(70, 70, 70, 0.4);
+  cursor: pointer;
+}
+
+.recipe_flag_container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 10px;
+  top: 10px;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  overflow: hidden;
+}
+
+.recipe_flag {
+  width: 155%;
+  height: 155%;
+}
+
+.recipe_rating_container {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  left: 15px;
+  top: 10px;
+  width: 160px;
+  height: 80px;
+  overflow: hidden;
+  justify-content: flex-start;
+}
+
+.recipe_rating {
+  font-size: 24px;
+  color: white;
+}
+
+.recipe_overlay {
+  position: absolute;
+  top: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0));
+}
+
+@media screen and (max-width: 1100px) {
+  .recipes_container {
+    width: 750px;
   }
+}
+
+@media screen and (max-width: 750px) {
+  .recipes_container {
+    width: 100%;
+  }
+  .recipe_card {
+    height: 300px;
+  }
+  .recipe_description {
+    height: calc(300px - 220px);
+    padding: 1.5rem;
+  }
+  .recipe_button {
+    margin-top: 0rem;
+  }
+}
