--- a/src/styles/RecipePreview.module.css
+++ b/src/styles/RecipePreview.module.css
@@ -15,55 +15,60 @@
   position: relative;
   margin: 1rem;
   width: var(--card_width);
-  height: 350px;
-  border: 0.3px solid;
-  border-radius: 15px;
-  box-shadow: 5px 5px 2px 1px rgba(70, 70, 70, 0.2);
+  height: 220px;
+  border-radius: 10px;
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
   transition: all 0.2s;
 }
 
 .recipe_image,
 .recipe_overlay {
   width: 100%;
-  width: var(--card_width);
   height: 220px;
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
+  background-size: cover;
+  border-radius: 10px;
   overflow: hidden;
 }
 
 .recipe_card:hover {
-  box-shadow: 3px 3px 2px 1px rgba(70, 70, 70, 0.4);
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.05);
 }
 
 .recipe_description {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 130px;
   padding-left: 1rem;
 }
 
 .recipe_title {
   font-size: large;
+  color: rgb(78, 78, 78);
   font-weight: 400;
-  text-transform: uppercase;
+  font-size: 24px;
 }
 
 .recipe_button {
   margin-top: 1rem;
   width: 110px;
   height: 30px;
-  background-color: transparent;
+  background-color: rgb(245, 244, 244);
   box-shadow: none;
-  border: 0.3px solid black;
+  border: 1px solid #e5e5e5;
   border-radius: 5px;
-  box-shadow: 3px 3px 2px 1px rgba(70, 70, 70, 0.2);
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
   transition: all 0.2s;
 }
 
 .recipe_button:hover {
-  box-shadow: 1px 1px 2px 1px rgba(70, 70, 70, 0.4);
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.05);
   cursor: pointer;
 }
 
@@ -105,7 +110,7 @@
 .recipe_overlay {
   position: absolute;
   top: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0));
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(255, 255, 255, 0));
 }
 
 @media screen and (max-width: 1100px) {
