--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -9,23 +9,15 @@
   align-items: center;
 }
 
-.nav {
-  display: flex;
-  align-items: center;
-}
-
 .ul {
+  margin-right: 1rem;
+  width: 300px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .ul .li {
   list-style: none;
-}
-
-.a {
-  font-size: 16px;
-  text-decoration: none;
-  margin: 1rem 2rem;
+  margin: 0rem 1rem;
 }
