--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -11,7 +11,7 @@
 
 .ul {
   margin-right: 1rem;
-  width: 300px;
+  width: 500px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -20,4 +20,9 @@
 .ul .li {
   list-style: none;
   margin: 0rem 1rem;
+}
+
+.header_anchor {
+  text-decoration: none;
+  font-size: 24px;
 }
