--- a/src/styles/RecipePreview.module.css
+++ b/src/styles/RecipePreview.module.css
@@ -2,9 +2,23 @@
   --card_width: 330px;
 }
 
-.recipes_container {
+.recipes_main_container {
   width: 1200px;
   margin: auto;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.recipes_input {
+  text-align: center;
+  width: 300px;
+}
+
+.recipes_container {
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -17,8 +31,8 @@
   width: var(--card_width);
   height: 220px;
   border-radius: 10px;
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.3),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.05);
   transition: all 0.2s;
 }
 
@@ -32,8 +46,8 @@
 }
 
 .recipe_card:hover {
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.5),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 1px rgba(0, 0, 0, 0.1);
 }
 
 .recipe_description {
