--- a/src/styles/Recipe.module.css
+++ b/src/styles/Recipe.module.css
@@ -11,7 +11,7 @@
 }
 
 .recipe_title {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bold;
   margin: 0;
   margin-bottom: 0.5rem;
@@ -21,18 +21,18 @@
   font-size: 1.8rem;
   font-weight: 300;
   margin: 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .recipe_instructions {
   font-size: 1.6rem;
   font-weight: 200;
   margin: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .recipe_details {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .recipe_summary {
@@ -41,27 +41,49 @@
   cursor: pointer;
 }
 
-.recipe_ul {
-  margin: 0;
-  padding: 0;
+.recipe_summary {
   list-style: none;
 }
 
+.recipe_summary:before {
+  content: '🌽';
+  display: inline-block;
+  font-size: 1.2rem;
+  margin-right: 0.5rem;
+  transition: transform 0.2s ease-in-out;
+}
+
+.recipe_details[open] .recipe_summary:before {
+  transform: rotate(90deg);
+}
+
+.recipe_ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0;
+  margin-top: 1rem;
+  padding: 0;
+  list-style: none;
+} 
+
 .recipe_li {
+  color: #333;
+  width: 200px;
+  margin: 0 1rem;
   font-size: 1rem;
-  margin-bottom: 0.5rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
 }
 
 .recipe_author {
   font-size: 1.2rem;
   margin: 0;
-  margin-bottom: 0.3rem;
+  margin-bottom: 1rem;
 }
 
 .recipe_comments {
-  margin-top: 1rem;
-  padding: 1rem;
-  padding-bottom: 0;
+  padding: 0.5rem 1rem;
   border: 1px solid #e5e5e5;
   border-radius: 1rem;
   background-color: #f5f5f5;
@@ -70,11 +92,22 @@
 .recipe_comment {
   color: #666;
   margin-left: 1.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .recipe_comment_author {
   font-weight: normal;
   color: #333;
   margin-bottom: 0;
+}
+
+.recipe_login {
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: normal;
+  color: #333;
+  margin-bottom: 1rem;
+}
+
+.login_link {
+  color: #333;
 }
