--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,5 +16,7 @@ code {
 }
 
 .active {
-  color: gold;
+  color: rgb(128, 83, 0) !important;
+  text-decoration: underline !important;
 }
+
