--- a/src/styles/AddRecipe.module.css
+++ b/src/styles/AddRecipe.module.css
@@ -1,7 +1,13 @@
 .form_container {
-  width: 700px;
+  max-width: 700px;
   margin: auto;
   margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 1.5rem;
+  border: 1px solid #e5e5e5;
+  border-radius: 1rem;
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
 }
 
 .form {
@@ -10,5 +16,80 @@
 }
 
 .form_input {
-  margin: 0.5rem;
+  font-family: -apple-system, 'Arial', sans-serif;
+  margin-bottom: 0.5rem;
+  height: 20px;
+}
+
+.form_input_select {
+  height: 26px;
+  margin-bottom: 0.5rem;
+}
+
+.login_title {
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+.form_lable {
+  margin-bottom: 0.3rem;
+  color: #333;
+  font-size: 1rem;
+}
+
+.login_form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login_lable {
+  margin-bottom: 0.3rem;
+  color: #333;
+  font-size: 1rem;
+}
+
+.login_input {
+  margin-bottom: 0.5rem;
+}
+
+.login_submit {
+  width: 110px;
+  margin-top: 1rem;
+  border-radius: 5px;
+  border: solid 0.3px #d7d7d7;
+}
+
+.form_ingredients_row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.form_input_ingredient {
+  margin-bottom: 0.5rem;
+  width: 192px;
+  height: 20px;
+}
+
+.form_buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.form_button, .form_button_add {
+  font-size: 0.9rem;
+  width: 95px;
+  height: 35px;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  margin-right: 10px;
+  border-radius: 5px;
+  border: solid 0.3px #d7d7d7;
+}
+
+.form_button_add {
+  align-self: center;
+  width: 200px;
 }
