--- a/src/styles/RecipePreview.module.css
+++ b/src/styles/RecipePreview.module.css
@@ -104,7 +104,7 @@
   height: 155%;
 }
 
-.recipe_rating_container {
+.recipe_title_container {
   position: absolute;
   display: flex;
   align-items: center;
@@ -116,8 +116,10 @@
   justify-content: flex-start;
 }
 
-.recipe_rating {
-  font-size: 24px;
+.recipe_title {
+  font-family: 'Sigmar', cursive;
+  letter-spacing: 1px;
+  font-size: 20px;
   color: white;
 }
 
