--- a/src/styles/AddComment.module.css
+++ b/src/styles/AddComment.module.css
@@ -9,11 +9,22 @@
 
 .form_input {
   font-family: -apple-system, 'Arial', sans-serif;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
 }
 
 .form_submit {
   width: 110px;
   margin-top: 1rem;
   border-radius: 5px;
+  background-color: white;
   border: solid 0.3px #d7d7d7;
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  transition: all 0.2s;
+}
+
+.form_submit:hover {
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.05),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.02), 0px 2px 1px rgba(0, 0, 0, 0.01);
 }
