--- a/src/styles/AddRecipe.module.css
+++ b/src/styles/AddRecipe.module.css
@@ -1,7 +1,7 @@
 .form_container {
   max-width: 700px;
   margin: auto;
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-bottom: 1rem;
   padding: 1.5rem;
   border: 1px solid #e5e5e5;
@@ -15,48 +15,32 @@
   flex-direction: column;
 }
 
+.form_title {
+  font-family: 'Sigmar', cursive;
+  letter-spacing: 1px;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
 .form_input {
   font-family: -apple-system, 'Arial', sans-serif;
   margin-bottom: 0.5rem;
   height: 20px;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
 }
 
 .form_input_select {
   height: 26px;
   margin-bottom: 0.5rem;
-}
-
-.login_title {
-  margin: 0;
-  margin-bottom: 1rem;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
 }
 
 .form_lable {
   margin-bottom: 0.3rem;
   color: #333;
   font-size: 1rem;
-}
-
-.login_form {
-  display: flex;
-  flex-direction: column;
-}
-
-.login_lable {
-  margin-bottom: 0.3rem;
-  color: #333;
-  font-size: 1rem;
-}
-
-.login_input {
-  margin-bottom: 0.5rem;
-}
-
-.login_submit {
-  width: 110px;
-  margin-top: 1rem;
-  border-radius: 5px;
-  border: solid 0.3px #d7d7d7;
 }
 
 .form_ingredients_row {
@@ -69,6 +53,8 @@
   margin-bottom: 0.5rem;
   width: 192px;
   height: 20px;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
 }
 
 .form_buttons {
@@ -78,7 +64,8 @@
   justify-content: flex-start;
 }
 
-.form_button, .form_button_add {
+.form_button,
+.form_button_add {
   font-size: 0.9rem;
   width: 95px;
   height: 35px;
@@ -87,6 +74,15 @@
   margin-right: 10px;
   border-radius: 5px;
   border: solid 0.3px #d7d7d7;
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  transition: all 0.2s;
+}
+
+.form_button:hover,
+.form_button_add:hover {
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.05),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.02), 0px 2px 1px rgba(0, 0, 0, 0.01);
 }
 
 .form_button_add {
