--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -11,6 +11,7 @@
 .header_logo {
   width: 400px;
   font-family: 'Sigmar', cursive;
+  letter-spacing: 1px;
   font-size: 36px;
 }
 
@@ -24,6 +25,7 @@
 
 .ul {
   font-family: 'Sigmar', cursive;
+  letter-spacing: 1px;
   margin-right: 1rem;
   display: flex;
   flex-direction: row;
@@ -54,9 +56,11 @@
   align-items: flex-end;
 }
 
-.login_span, .logout_span {
+.login_span,
+.logout_span {
   font-size: 24px;
   font-family: 'Sigmar', cursive;
+  letter-spacing: 1px;
 }
 
 .logout_span {
