--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -1,7 +1,7 @@
 .login_container {
   max-width: 400px;
   margin: auto;
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-bottom: 1rem;
   padding: 1.5rem;
   border: 1px solid #e5e5e5;
@@ -13,6 +13,8 @@
 .login_title {
   margin: 0;
   margin-bottom: 1rem;
+  font-family: 'Sigmar', cursive;
+  letter-spacing: 1px;
 }
 
 .login_form {
@@ -28,6 +30,8 @@
 
 .login_input {
   margin-bottom: 0.5rem;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
 }
 
 .login_submit {
@@ -35,4 +39,12 @@
   margin-top: 1rem;
   border-radius: 5px;
   border: solid 0.3px #d7d7d7;
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  transition: all 0.2s;
+}
+
+.login_submit:hover {
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.05),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.02), 0px 2px 1px rgba(0, 0, 0, 0.01);
 }
