--- a/src/styles/RecipePreview.module.css
+++ b/src/styles/RecipePreview.module.css
@@ -15,6 +15,8 @@
 .recipes_input {
   text-align: center;
   width: 300px;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
 }
 
 .recipes_container {
