--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -18,4 +19,9 @@ code {
 .active {
   color: rgb(128, 83, 0) !important;
   text-decoration: underline !important;
+}
+
+#root {
+  position: relative;
+  height: 100vh;
 }
