--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -1,10 +1,10 @@
 .plug {
- width: 550px;
- margin: auto; 
- text-align: center;
- margin-top: 2rem;
- font-family: 'Sigmar', cursive;
- letter-spacing: 1px;
- font-size: 24px;
- color: rgb(50, 50, 50)
+  width: 550px;
+  margin: auto;
+  text-align: center;
+  margin-top: 2rem;
+  font-family: 'Sigmar', cursive;
+  letter-spacing: 1px;
+  font-size: 24px;
+  color: rgb(50, 50, 50);
 }
