--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -35,6 +35,7 @@
 }
 
 .login_submit {
+  font-size: 0.9rem;
   width: 110px;
   margin-top: 1rem;
   border-radius: 5px;
@@ -47,4 +48,12 @@
 .login_submit:hover {
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.05),
     0px 3px 1px -2px rgba(0, 0, 0, 0.02), 0px 2px 1px rgba(0, 0, 0, 0.01);
+}
+
+.login_signup {
+  margin-top: 1rem;
+}
+
+.login_signup_link {
+  color: #333;
 }
