--- a/src/styles/AddRecipe.module.css
+++ b/src/styles/AddRecipe.module.css
@@ -30,13 +30,6 @@
   border-radius: 3px;
 }
 
-.form_input_select {
-  height: 26px;
-  margin-bottom: 0.5rem;
-  border: 1px solid #e5e5e5;
-  border-radius: 3px;
-}
-
 .form_lable {
   margin-bottom: 0.3rem;
   color: #333;
@@ -68,7 +61,7 @@
 .form_button_add {
   font-size: 0.9rem;
   width: 95px;
-  height: 40px;
+  height: 30px;
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
   margin-right: 10px;
@@ -83,6 +76,12 @@
 .form_button_add:hover {
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.05),
     0px 3px 1px -2px rgba(0, 0, 0, 0.02), 0px 2px 1px rgba(0, 0, 0, 0.01);
+}
+
+.form_button:active,
+.form_button_add:active {
+  box-shadow: 0px 3px 3px 0.1px rgba(0, 0, 0, 0.15),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.06), 0px 2px 1px rgba(0, 0, 0, 0.03);
 }
 
 .form_button_add {
