--- a/src/styles/RecipePreview.module.css
+++ b/src/styles/RecipePreview.module.css
@@ -12,11 +12,24 @@
   flex-direction: column;
 }
 
+.recipes_input_container {
+  margin: 1rem 0;
+}
+
 .recipes_input {
   text-align: center;
   width: 300px;
   border: 1px solid #e5e5e5;
   border-radius: 3px;
+}
+
+.recipes_input_select {
+  text-align: center;
+  width: 150px;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+  margin-left: 1rem;
+  color: #333
 }
 
 .recipes_container {
