Link has been added to logo

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -13,6 +13,8 @@
 }
 
 .header_logo {
+  text-decoration: none;
+  color: black;
   margin-left: 1rem;
   width: 400px;
   font-family: 'Sigmar', cursive;
