--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,11 +1,11 @@
 .footer {
   height: 100px;
-  background-color: #ffd24d;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease-out;
 }
 
 .footer_title {
