--- a/src/styles/RecipePreview.module.css
+++ b/src/styles/RecipePreview.module.css
@@ -1,9 +1,5 @@
-:root {
-  --card_width: 330px;
-}
-
 .recipes_main_container {
-  width: 1200px;
+  max-width: 1100px;
   margin: auto;
   margin-top: 1rem;
   display: flex;
@@ -12,24 +8,36 @@
   flex-direction: column;
 }
 
-.recipes_input_container {
-  margin: 1rem 0;
-}
-
 .recipes_input {
+  margin: 0.5rem 0;
   text-align: center;
   width: 300px;
+  height: 20px;
   border: 1px solid #e5e5e5;
-  border-radius: 3px;
+  border-radius: 10px;
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
+  0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  transition: all 0.3s;
 }
 
 .recipes_input_select {
+  margin: 0.5rem 0;
   text-align: center;
   width: 150px;
+  height: 24px;
   border: 1px solid #e5e5e5;
-  border-radius: 3px;
+  border-radius: 10px;
   margin-left: 1rem;
-  color: #333
+  color: #333;
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+}
+
+.recipes_input:focus,
+.recipes_input_select:focus {
+  outline-width: 0;
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.025);
 }
 
 .recipes_container {
@@ -43,7 +51,7 @@
 .recipe_card {
   position: relative;
   margin: 1rem;
-  width: var(--card_width);
+  width: 330px;
   height: 220px;
   border-radius: 10px;
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.3),
