update styling and images, add About section

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ code {
   text-decoration: underline !important;
 }
 
+a {
+  text-decoration: none;
+}
+
 #root {
   position: relative;
   height: 100vh;
