--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -15,8 +15,8 @@
   background: linear-gradient(
     to right,
     rgba(0, 0, 0, 1),
-    rgba(0, 0, 0, 0.6),
-    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.8),
+    rgba(0, 0, 0, 0.3),
     rgba(0, 0, 0, 0.1)
   );
   z-index: 1;
@@ -58,10 +58,11 @@
 
 .home_card {
   padding: 0 0.9rem 0.9rem 0.9rem;
+  margin: 0.5rem;
   height: 150px;
   width: 300px;
   border: 1px solid #e5e5e5;
-  border-radius: 3px;
+  border-radius: 1rem;
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
     0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
   transition: all 0.3s;
@@ -73,29 +74,31 @@
 }
 
 .home_card_header {
+  color: black;
   font-size: 24px;
   font-family: 'Sigmar', cursive;
   letter-spacing: 1px;
 }
 
 .home_card_body {
+  color: black;
   font-weight: 300;
 }
 
 @media screen and (min-width: 1440px) {
   .home_hero_container {
-    height: 450px;
+    height: 400px;
   }
   .home_hero_overlay {
-    height: 450px;
+    height: 400px;
   }
   .home_cards_container {
     margin-top: 3rem;
   }
   .home_hero_video {
-  transform: scale(0.5, 0.5);
-  top: -195%;
-  left: -64%;
+    transform: scale(0.5, 0.5);
+    top: -195%;
+    left: -64%;
   }
 }
 
