--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -5,8 +5,8 @@
   padding: 1.5rem;
   border: 1px solid #e5e5e5;
   border-radius: 1rem;
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
+   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
 }
 
 .about_title {
