--- a/src/styles/Recipe.module.css
+++ b/src/styles/Recipe.module.css
@@ -6,8 +6,8 @@
   padding: 1.5rem;
   border: 1px solid #e5e5e5;
   border-radius: 1rem;
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
+   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
 }
 
 .recipe_title {
@@ -39,9 +39,6 @@
   font-size: 1rem;
   font-weight: 300;
   cursor: pointer;
-}
-
-.recipe_summary {
   list-style: none;
 }
 
@@ -60,8 +57,7 @@
 
 .recipe_ul {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   margin: 0;
   margin-top: 1rem;
   padding: 0;
