--- a/src/styles/RecipePreview.module.css
+++ b/src/styles/RecipePreview.module.css
@@ -15,8 +15,8 @@
   height: 20px;
   border: 1px solid #e5e5e5;
   border-radius: 10px;
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
+   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
   transition: all 0.3s;
 }
 
@@ -29,23 +29,22 @@
   border-radius: 10px;
   margin-left: 1rem;
   color: #333;
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
+   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
 }
 
 .recipes_input:focus,
 .recipes_input_select:focus {
   outline-width: 0;
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.025);
+  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.2),
+   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.025);
 }
 
 .recipes_container {
   width: 100%;
   display: flex;
   justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
 }
 
 .recipe_card {
@@ -54,8 +53,8 @@
   width: 330px;
   height: 220px;
   border-radius: 10px;
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.3),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.05);
+  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.3),
+   0 3px 1px -2px rgba(0, 0, 0, 0.1),0 2px 1px rgba(0, 0, 0, 0.05);
   transition: all 0.2s;
 }
 
@@ -69,8 +68,8 @@
 }
 
 .recipe_card:hover {
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.5),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 1px rgba(0, 0, 0, 0.1);
+  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.5),
+   0 3px 1px -2px rgba(0, 0, 0, 0.2),0 2px 1px rgba(0, 0, 0, 0.1);
 }
 
 .recipe_description {
@@ -83,13 +82,6 @@
   padding-left: 1rem;
 }
 
-.recipe_title {
-  font-size: large;
-  color: rgb(78, 78, 78);
-  font-weight: 400;
-  font-size: 24px;
-}
-
 .recipe_button {
   margin-top: 1rem;
   width: 110px;
@@ -98,14 +90,14 @@
   box-shadow: none;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
+   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
   transition: all 0.2s;
 }
 
 .recipe_button:hover {
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 3px 1px -2px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.05);
+  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.2),
+   0 3px 1px -2px rgba(0, 0, 0, 0.1),0 2px 1px rgba(0, 0, 0, 0.05);
   cursor: pointer;
 }
 
