--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -5,8 +5,8 @@
   padding: 1.5rem;
   border: 1px solid #e5e5e5;
   border-radius: 1rem;
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
-   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1), 0 3px 1px -2px rgba(0, 0, 0, 0.05),
+    0 2px 1px rgba(0, 0, 0, 0.02);
 }
 
 .about_title {
@@ -23,13 +23,12 @@
 
 .about_ul {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   padding-left: 1.5rem;
 }
 
-
-.about_li_tech, .about_li_credits {
+.about_li_tech,
+.about_li_credits {
   margin-top: 0.5rem;
   width: 330px;
   list-style-type: none;
