--- a/src/styles/AddComment.module.css
+++ b/src/styles/AddComment.module.css
@@ -19,12 +19,12 @@
   border-radius: 5px;
   background-color: white;
   border: solid 0.3px #d7d7d7;
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
-   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1), 0 3px 1px -2px rgba(0, 0, 0, 0.05),
+    0 2px 1px rgba(0, 0, 0, 0.02);
   transition: all 0.2s;
 }
 
 .form_submit:hover {
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.05),
-   0 3px 1px -2px rgba(0, 0, 0, 0.02),0 2px 1px rgba(0, 0, 0, 0.01);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.05), 0 3px 1px -2px rgba(0, 0, 0, 0.02),
+    0 2px 1px rgba(0, 0, 0, 0.01);
 }
