--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -63,14 +63,14 @@
   width: 300px;
   border: 1px solid #e5e5e5;
   border-radius: 1rem;
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
-   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1), 0 3px 1px -2px rgba(0, 0, 0, 0.05),
+    0 2px 1px rgba(0, 0, 0, 0.02);
   transition: all 0.3s;
 }
 
 .home_card:hover {
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.2),
-   0 3px 1px -2px rgba(0, 0, 0, 0.1),0 2px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2), 0 3px 1px -2px rgba(0, 0, 0, 0.1),
+    0 2px 1px rgba(0, 0, 0, 0.05);
 }
 
 .home_card_header {
