--- a/src/styles/RecipePreview.module.css
+++ b/src/styles/RecipePreview.module.css
@@ -15,8 +15,8 @@
   height: 20px;
   border: 1px solid #e5e5e5;
   border-radius: 10px;
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
-   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow: 0 3px 3px0 rgba(0, 0, 0, 0.1), 0 3px 1px -2px rgba(0, 0, 0, 0.05),
+    0 2px 1px rgba(0, 0, 0, 0.02);
   transition: all 0.3s;
 }
 
@@ -29,15 +29,15 @@
   border-radius: 10px;
   margin-left: 1rem;
   color: #333;
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
-   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow: 0 3px 3px0 rgba(0, 0, 0, 0.1), 0 3px 1px -2px rgba(0, 0, 0, 0.05),
+    0 2px 1px rgba(0, 0, 0, 0.02);
 }
 
 .recipes_input:focus,
 .recipes_input_select:focus {
   outline-width: 0;
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.2),
-   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.025);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2), 0 3px 1px -2px rgba(0, 0, 0, 0.05),
+    0 2px 1px rgba(0, 0, 0, 0.025);
 }
 
 .recipes_container {
@@ -53,8 +53,8 @@
   width: 330px;
   height: 220px;
   border-radius: 10px;
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.3),
-   0 3px 1px -2px rgba(0, 0, 0, 0.1),0 2px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.3), 0 3px 1px -2px rgba(0, 0, 0, 0.1),
+    0 2px 1px rgba(0, 0, 0, 0.05);
   transition: all 0.2s;
 }
 
@@ -68,8 +68,8 @@
 }
 
 .recipe_card:hover {
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.5),
-   0 3px 1px -2px rgba(0, 0, 0, 0.2),0 2px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.5), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 2px 1px rgba(0, 0, 0, 0.1);
 }
 
 .recipe_description {
@@ -87,17 +87,16 @@
   width: 110px;
   height: 30px;
   background-color: rgb(245, 244, 244);
-  box-shadow: none;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.1),
-   0 3px 1px -2px rgba(0, 0, 0, 0.05),0 2px 1px rgba(0, 0, 0, 0.02);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1), 0 3px 1px -2px rgba(0, 0, 0, 0.05),
+    0 2px 1px rgba(0, 0, 0, 0.02);
   transition: all 0.2s;
 }
 
 .recipe_button:hover {
-  box-shadow:0 3px 3px0 rgba(0, 0, 0, 0.2),
-   0 3px 1px -2px rgba(0, 0, 0, 0.1),0 2px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2), 0 3px 1px -2px rgba(0, 0, 0, 0.1),
+    0 2px 1px rgba(0, 0, 0, 0.05);
   cursor: pointer;
 }
 
