--- a/src/styles/Authorization.module.css
+++ b/src/styles/Authorization.module.css
@@ -39,7 +39,7 @@
   font-size: 0.9rem;
   width: 110px;
   height: 30px;
-  margin-top: 1rem;
+  margin: 1rem 0;
   border-radius: 5px;
   border: solid 0.3px #d7d7d7;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1), 0 3px 1px -2px rgba(0, 0, 0, 0.05),
@@ -57,11 +57,16 @@
     0 3px 1px -2px rgba(0, 0, 0, 0.06), 0 2px 1px rgba(0, 0, 0, 0.03);
 }
 
-.login_signup {
+.login_signup, .login_error {
+  font-size: 14px;
   margin-top: 1rem;
 }
 
 .login_signup_link {
   color: #333;
   text-decoration: underline;
+}
+
+.login_error {
+  color: tomato;
 }
