--- a/src/styles/AddComment.module.css
+++ b/src/styles/AddComment.module.css
@@ -25,6 +25,6 @@
 }
 
 .form_submit:hover {
-  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.05), 0 3px 1px -2px rgba(0, 0, 0, 0.02),
-    0 2px 1px rgba(0, 0, 0, 0.01);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.05),
+    0 3px 1px -2px rgba(0, 0, 0, 0.02), 0 2px 1px rgba(0, 0, 0, 0.01);
 }
