--- a/src/styles/Authorization.module.css
+++ b/src/styles/Authorization.module.css
@@ -36,8 +36,8 @@
 }
 
 .authorization_submit:hover {
-  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.05), 0 3px 1px -2px rgba(0, 0, 0, 0.02),
-    0 2px 1px rgba(0, 0, 0, 0.01);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.05),
+    0 3px 1px -2px rgba(0, 0, 0, 0.02), 0 2px 1px rgba(0, 0, 0, 0.01);
 }
 
 .authorization_submit:active {
@@ -45,7 +45,8 @@
     0 3px 1px -2px rgba(0, 0, 0, 0.06), 0 2px 1px rgba(0, 0, 0, 0.03);
 }
 
-.authorization_signup, .authorization_error {
+.authorization_signup,
+.authorization_error {
   font-size: 14px;
   margin-top: 1rem;
 }
