--- a/frontend/src/components/RecipesList.module.css
+++ b/frontend/src/components/RecipesList.module.css
@@ -1,3 +1,3 @@
 .recipes_container {
-  @apply w-full flex flex-col items-center bg-slate-200 h-full;
+  @apply w-full flex flex-col items-center h-full;
 }
