--- a/frontend/src/components/Recipe.module.css
+++ b/frontend/src/components/Recipe.module.css
@@ -1,9 +1,9 @@
 .recipe_container {
-  @apply m-3 max-w-[600px] bg-white rounded-lg shadow-lg md:flex;
+  @apply m-3 max-w-[1000px] bg-white rounded-lg shadow-xl md:flex;
 }
 
 .recipe_heading {
-  @apply text-2xl font-bold text-center;
+  @apply text-2xl font-medium;
 }
 
 .recipe_image_container {
@@ -11,7 +11,7 @@
 }
 
 .recipe_image {
-  @apply h-48 w-full object-cover md:h-full md:w-60
+  @apply h-48 w-full object-cover md:h-full md:w-72
 }
 
 .recipe_data_container {
