--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,10 @@ body {
   box-sizing: border-box;
 }
 
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
