update signup related components

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,8 +13,13 @@ body {
   box-sizing: border-box;
 }
 
-input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 30px white inset !important;
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 60px #ffffff inset !important;
+  background-color: #ffffff !important;
+  background-clip: content-box !important;
 }
 
 code {
