--- a/frontend/src/components/Form/Form.module.css
+++ b/frontend/src/components/Form/Form.module.css
@@ -1,31 +1,31 @@
 .form {
-  @apply flex flex-col items-center p-4 w-[360px] sm:w-[480px] m-4  border border-gray-200 rounded-md shadow-md;
+  @apply flex flex-col items-center p-4 w-[360px] m-4 border border-gray-100 rounded-md shadow-md;
 }
 
 .title {
-  @apply font-light text-3xl sm:font-normal;
+  @apply font-light text-3xl;
 }
 
 .input_container {
-  @apply flex relative flex-col w-full sm:flex-row justify-center sm:items-center sm:pr-3;
+  @apply flex relative flex-col w-full sm:flex-row justify-center sm:items-center;
 }
 
-.input{
-  @apply my-3 p-3 border border-gray-300 rounded-md sm:w-[300px] focus:outline-orange-300 focus:outline-offset-1 focus:outline-2;
+.input {
+  @apply font-light my-3 p-3 border border-gray-300 rounded-md sm:w-[300px] focus:outline-orange-300 focus:-outline-offset-1 focus:outline-2;
 }
 
 .input::placeholder {
-  @apply text-sm
+  @apply font-light;
 }
 
 .label {
-  @apply  absolute -top-1 sm:left-20 left-2 bg-white text-orange-300 p-1 text-left mr-2;
+  @apply font-light absolute -top-1 left-8 bg-white text-orange-300 p-1 text-left mr-2;
 }
 
 .button {
-  @apply !bg-orange-700 hover:!bg-orange-500 active:!bg-orange-300 font-extrabold py-2 px-4 rounded-md text-white my-2 transition-all duration-300 ease-in-out focus:outline-orange-300;
+  @apply !bg-orange-700 hover:!bg-orange-500 active:!bg-orange-300 font-extrabold py-2 px-4 rounded-md text-white my-2 transition-all duration-300 ease-in-out focus:outline-orange-300 disabled:!bg-zinc-300;
 }
 
 .error {
-  @apply text-orange-700 text-sm pt-2;
+  @apply p-3 text-orange-700 text-xs;
 }
