--- a/frontend/src/components/Form/Form.module.css
+++ b/frontend/src/components/Form/Form.module.css
@@ -11,21 +11,45 @@
 }
 
 .input {
-  @apply font-light my-3 p-3 border border-gray-300 rounded-md sm:w-[300px] focus:outline-orange-300 focus:-outline-offset-1 focus:outline-2;
+  @apply relative font-light my-3 p-3 border border-gray-300 rounded-md sm:w-[300px] focus:outline-orange-300 focus:-outline-offset-1 focus:outline-2;
 }
 
-.input::placeholder {
-  @apply font-light;
+.input::placeholder, .dropzone_lable {
+  @apply font-light text-zinc-400;
 }
 
 .label {
-  @apply font-light absolute -top-1 left-8 bg-white text-orange-300 p-1 text-left mr-2;
+  @apply font-light absolute -top-1 left-4 bg-white text-orange-300 p-1 text-left mr-2 z-20;
 }
 
 .button {
-  @apply !bg-orange-700 hover:!bg-orange-500 active:!bg-orange-300 font-extrabold py-2 px-4 rounded-md text-white my-2 transition-all duration-300 ease-in-out focus:outline-orange-300 disabled:!bg-zinc-300;
+  @apply w-36 flex justify-center items-center !bg-orange-500 hover:!bg-orange-300 active:!bg-orange-200 font-extrabold py-2 px-4 rounded-md text-white m-3 transition-all duration-300 ease-in-out focus:outline-orange-300 disabled:!bg-zinc-300 disabled:cursor-not-allowed;
 }
 
 .error {
   @apply p-3 text-orange-700 text-xs;
+}
+
+.dropzone {
+  @apply  my-3 flex flex-col items-center justify-center w-full h-24 border border-dashed rounded-md border-gray-300 cursor-pointer;
+}
+
+.dropzone_inner {
+  @apply  grid p-2 grid-flow-row-dense grid-cols-3 grid-rows-1 gap-2 items-center justify-between w-full h-full overflow-hidden focus:outline-orange-300 focus:-outline-offset-1 focus:outline-2;
+}
+
+.dropzone_lable {
+  @apply col-span-2;
+}
+
+.wide_form {
+  @apply sm:w-[600px] md:w-[750px] lg:w-[900px];
+}
+
+.wide_input, .wide_dropzone {
+  @apply sm:w-[540px] md:w-[690px] lg:w-[840px];
+}
+
+.wide_label {
+  @apply sm:-top-1 sm:left-8;
 }
