--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -27,5 +27,9 @@
 }
 
 .header_title {
-  @apply text-2xl sm:text-4xl font-light;
+  @apply text-xl sm:text-4xl font-light;
+}
+
+.header_nav {
+  @apply hidden;
 }
