--- a/frontend/src/components/Form/styles/Form.module.css
+++ b/frontend/src/components/Form/styles/Form.module.css
@@ -28,7 +28,7 @@
 }
 
 .label {
-  @apply font-light absolute -top-1 right-4 bg-white text-orange-300 p-1 text-left mr-2 z-20;
+  @apply font-light text-xs absolute -top-1 right-5 bg-white text-orange-300 p-1 text-left mr-2 z-20;
 }
 
 .button {
